<resources>
    <string name="app_name">Chronic</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_pain_tracking">Pain Tracking</string>
    <string name="menu_reminders">Reminders</string>
    <string name="menu_my_data">My Data</string>
    <string name="menu_global_forum">Global Forum</string>
    <string name="menu_my_feed">My Feed</string>
    <string name="menu_post">Post</string>
    <string name="menu_settings">Settings</string>


    <!-- Strings for My Tag Fragment -->
    <string name="my_tags_fragment_title">My Tags</string>
    <string name="my_tags_description">Customize your pain tracking experience with tags for your symptoms, triggers, and treatments. Not seeing one you like? Add your own!</string>
    <string-array name="tag_filter_types">
        <item>All Tag Types</item>
        <item>My Tags</item>
        <item>Symptoms</item>
        <item>Triggers</item>
        <item>Treatments</item>
    </string-array>
    <string-array name="tag_types">
        <item>Symptom</item>
        <item>Trigger</item>
        <item>Treatment</item>
    </string-array>
    <string name="tag_item_default">Default Tag</string>
    <string name="choose_tag_type">Choose Tag Type</string>

    <!-- Strings for Reminders Fragment -->
    <string name="reminder_time_default">10:00 AM</string>
    <string name="reminder_days_default">S M T W T F S</string>
    <string name="reminder_title_default">Take Yo Pills</string>
    <string name="reminder_content_default">Don\'t forget to take your pills to help prevent migraine attacks</string>
    <string name="reminder_save_button">Save</string>
    <string name="reminder_delete_button">Delete</string>

    <!-- Strings for day buttons on reminder fragments -->
    <string name="day_button_s">S</string>
    <string name="day_button_m">M</string>
    <string name="day_button_t">T</string>
    <string name="day_button_w">W</string>
    <string name="day_button_f">F</string>
    <string name="menu_my_data_label">My Data</string>
    <string name="tracking_tags_button">Tracking Tags</string>
    <string name="profile_settings_button">Profile Settings</string>
    <string name="my_data_button">My Data</string>
    <string name="complete_tracking_for_today_label">Complete Tracking For Today</string>
    <string name="directions_text_label">You will get the opportunity to fill out the daily pain tracking surveys</string>
    <string name="complete_button">Complete Data Tracking</string>
    <string name="change_my_tags_button">Change My Tags</string>
    <string name="share_button">Share</string>
    <string name="support_button">Support</string>
    <string name="logout_button">Logout</string>
    <string name="web_site_button">Web Site</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="date_and_time_entry_information_label">Date and Time Entry Information</string>
    <string name="start_date_label">Start Date</string>
    <string name="end_date_label">End Date</string>
    <string name="pain_level_label">Pain Level</string>
    <string name="Pain_LeveL_Instructions_Label">Pain Level on a scale of 1 to 10 (With 10 being the worst)</string>
    <string name="symptoms_label">Symptoms</string>
    <string name="triggers_label">Triggers</string>
    <string name="treatments_labels">Treatments</string>
    <string name="pain_data_entry_fragment_title">Pain Data Entry</string>
    <string name="entry_title_label">Entry Title</string>
    <string name="integer_pain_level_hint">Integer Pain Level</string>
    <string name="end_date_hint">1/1/1970</string>
    <string name="start_date_hint">1/1/1970</string>
    <string name="enter_a_title_for_your_entry_here_hint">Enter a title for your entry here</string>
    <string name="press_button_to_add_entry_hint">Press Button to Add Entry</string>
    <string name="Loading_Screen_Title">Loading Screen Label</string>
    <string name="User_Edit_Screen_Label">User Edit Screen</string>
    <string name="start_time_label">Start Time</string>
    <string name="start_time_hint">00:00:00</string>
    <string name="end_time_label">End Time</string>
    <string name="end_time_hint">23:00:00</string>
    <string name="filter_weekly_monthly_action">Filter_Weekly_Monthly</string>
    <string name="global_button">Global</string>
    <string name="your_posts_button">Your Posts</string>
    <string name="post_content_preview_text">Post content preview, only should show the first however many characters it takes to fill this thing. I guess I\'ll just keep going until I hit max</string>
    <string name="post_author_text">Author: Put username here</string>
    <string name="nav_forum_label">Global Forum</string>
    <string name="button_description_text">Select the days you want notifications, dark purple is selected.</string>
    <string name="submit_new_entry_label">Submit New Entry</string>
    <string name="list_of_my_tags_label">List Of My Tags:</string>
    <string name="view_more_details_button">View More Details</string>
    <string name="title_placeholder">Title Placeholder</string>
    <string name="author_username_placeholder">Author Username Placeholder</string>
    <string name="placeholder_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="reply_button_text">Reply</string>
    <string name="share_button_Text">Share</string>
    <string name="post_button">Post</string>
    <string name="enter_title_here_hint">Enter Title Here:</string>
    <string name="enter_image_url_here_hint">Enter Image URL Here:</string>
    <string name="forum_edit_label">Forum Edit Page</string>
    <string name="forum_detail_label">Forum Detail</string>
    <string name="forum_reply_content_default">Here is where a reply would go, look at its wonderful content. :)</string>
    <string name="forum_reply_date_default">11/11/1111~~~11:11 PM</string>
</resources>