<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_pain_tracking"
            android:icon="@drawable/ic_baseline_favorite_border_24"
            android:title="@string/menu_pain_tracking" />
        <item
            android:id="@+id/nav_reminder_list"
            android:icon="@drawable/ic_baseline_access_time_24"
            android:title="@string/menu_reminders" />
        <item
            android:id="@+id/nav_data"
            android:icon="@drawable/ic_baseline_show_chart_24"
            android:title="@string/menu_my_data" />
        <item
            android:id="@+id/nav_pain_tracking"
            android:icon="@drawable/ic_baseline_chat_bubble_outline_24"
            android:title="@string/menu_global_forum" />
        <item
            android:id="@+id/nav_pain_tracking"
            android:icon="@drawable/ic_baseline_dynamic_feed_24"
            android:title="@string/menu_my_feed" />
        <item
            android:id="@+id/nav_pain_tracking"
            android:icon="@drawable/ic_baseline_create_24"
            android:title="@string/menu_post" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
    </group>
</menu>