<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.ReminderEditFragment"
    android:layout_marginHorizontal="10dp">

    <EditText
        android:id="@+id/reminder_detail_title_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reminder_title_default"
        android:textAlignment="center"
        android:textColor="@color/plum"
        android:textSize="27sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/reminder_detail_content_edit"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_below="@id/reminder_detail_title_edit"
        android:textColor="@color/grape"
        android:textSize="20sp"
        android:text="@string/reminder_content_default"
        android:textAlignment="center"
        />

    <TimePicker
        android:id="@+id/reminder_detail_timepicker"
        style="@style/Theme.Chronic.TimePicker"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_below="@id/reminder_detail_content_edit" />

    <LinearLayout
        android:id="@+id/reminder_detail_dayButtons"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/reminder_detail_timepicker"
        >

        <Button
            android:id="@+id/dayButton0"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_s" />

        <Button
            android:id="@+id/dayButton1"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_m" />

        <Button
            android:id="@+id/dayButton2"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_t" />

        <Button
            android:id="@+id/dayButton3"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_w" />

        <Button
            android:id="@+id/dayButton4"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_t" />

        <Button
            android:id="@+id/dayButton5"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_f" />


        <Button
            android:id="@+id/dayButton6"
            style="@style/Theme.Chronic.DayButtons"
            android:text="@string/day_button_s" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/reminder_detail_dayButtons"
        >

        <Button
            android:id="@+id/reminder_save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_save_button"
            />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/reminder_delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reminder_delete_button"
            />

    </LinearLayout>
</RelativeLayout>