<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_pain_tracking">

    <fragment
        android:id="@+id/nav_profile"
        android:name="edu.rosehulman.chronic.ui.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_pain_tracking"
        android:name="edu.rosehulman.chronic.ui.PainTrackingFragment"
        android:label="@string/menu_pain_tracking"
        tools:layout="@layout/fragment_reminder_list" />

    <fragment
        android:id="@+id/nav_reminder_list"
        android:name="edu.rosehulman.chronic.ui.ReminderListFragment"
        android:label="@string/menu_reminders"
        tools:layout="@layout/fragment_reminder_list" />

    <fragment
        android:id="@+id/nav_reminder_detail"
        android:name="edu.rosehulman.chronic.ui.ReminderDetailFragment"
        android:label="Reminder Details"
        tools:layout="@layout/fragment_reminder_detail"/>

    <fragment
        android:id="@+id/nav_data"
        android:name="edu.rosehulman.chronic.ui.DataFragment"
        android:label="@string/menu_mydata"
        tools:layout="@layout/fragment_data" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="edu.rosehulman.chronic.ui.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_my_tags"
        android:name="edu.rosehulman.chronic.ui.MyTagsFragment"
        android:label="@string/my_tags_fragment_title"
        tools:layout="@layout/fragment_my_tags"
        />

</navigation>