<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_entry_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:src="@drawable/ic_baseline_add_24"
        android:backgroundTint="?colorPrimary"
        android:tint="@color/pearl"
        android:contentDescription="@string/press_button_to_add_entry_hint" />

    <ScrollView
        android:id="@+id/Entry_Scroll_Bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <TextView
            android:id="@+id/title_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/entry_title_label"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginHorizontal="10dp"
            />

        <EditText
            android:id="@+id/title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title_label"
            android:layout_alignParentStart="true"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:layout_marginBottom="10dp"
            android:autofillHints="Fill in with Entry Title"
            android:hint="@string/enter_a_title_for_your_entry_here_hint"
            android:inputType="text"
            />

        <TextView
            android:id="@+id/text_input_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/title_input"
            android:text="@string/date_and_time_entry_information_label"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_margin="10dp"
            />

        <TextView
            android:id="@+id/start_date_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_label"
            android:layout_alignParentStart="true"
            android:text="@string/start_date_label"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="50dp"
            />

        <EditText
            android:id="@+id/start_time_text_input"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/start_date_label"
            android:layout_alignParentStart="true"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/start_date_hint"
            android:autofillHints="Fill In the Start Date"
            android:inputType="datetime"
            />

        <TextView
            android:id="@+id/end_date_label"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_input_label"
            android:layout_alignParentEnd="true"
            android:text="@string/end_date_label"
            android:textColor="?colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="50dp"
            />

        <EditText
            android:id="@+id/end_time_text_input"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/end_date_label"
            android:layout_alignParentEnd="true"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="50dp"
            android:hint="@string/end_date_hint"
            android:autofillHints="Fill in the End Date"
            android:inputType="datetime"
            />

        <TextView
            android:id="@+id/Pain_Level_Label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/start_time_text_input"
            android:text="@string/pain_level_label"
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="40dp"
            android:layout_marginHorizontal="10dp"
            />

        <TextView
            android:id="@+id/pain_level_instructions_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/Pain_Level_Label"
            android:layout_alignParentStart="true"
            android:text="@string/Pain_LeveL_Instructions_Label"
            android:textColor="?colorPrimary"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            />

        <EditText
            android:id="@+id/pain_level_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/pain_level_instructions_label"
            android:layout_alignParentStart="true"
            android:textColor="@color/grey"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginHorizontal="10dp"
            android:autofillHints="Fill in with Pain Level"
            android:hint="@string/integer_pain_level_hint"
            android:inputType="number"
            />

        <TextView
            android:id="@+id/symptoms_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/pain_level_input"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/symptoms_label"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:drawablePadding="40dp"
            app:drawableTint="?colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/symptoms_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/symptoms_label"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/triggers_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/symptoms_recycler_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/triggers_label"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:drawablePadding="40dp"
            app:drawableTint="?colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/triggers_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/triggers_label"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />

        <TextView
            android:id="@+id/treatments_label"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/triggers_recycler_view"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/treatments_labels"
            android:textColor="?colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableRightCompat="@drawable/ic_baseline_keyboard_arrow_down_24"
            android:drawablePadding="40dp"
            app:drawableTint="?colorPrimary" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/treatments_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@id/treatments_label"
            android:layout_margin="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp" />
    </RelativeLayout>
    </ScrollView>







</RelativeLayout>